fix title spacing

--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -29,6 +29,7 @@ header {
 
 #header-title{
   padding-top: 0.5rem;
+  padding-left: 10px;
   float: left;
   font-size: 3rem
 }
